[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nba_apiv3"
version = "0.1.1"
description = "An API Client package to access the APIs version 3 for NBA.com"
license = "MIT"
authors = [ 
     "Vladislav Shufinsky <shufinsky.90210@gmail.com>",
]
maintainers = [
    "Vladislav Shufinsky <shufinsky.90210@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/shufinskiy/nba_apiv3"
documentation = "https://github.com/shufinskiy/nba_apiv3/blob/master/README.md"
keywords = ["api", "basketball", "data", "nba", "sports", "stats"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
numpy = "^1.22.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/shufinskiy/nba_apiv3/issues"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0"
flake8 = "^5.0.4"

[tool.pytest.ini_options]
testpaths = "./tests/unit/"